--- a/pages/detail_project.html
+++ b/pages/detail_project.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../assets/css/ui/header.css" />
     <link rel="stylesheet" href="../assets/css/ui/navbar.css" />
     <link rel="stylesheet" href="../assets/css/ui/footer.css" />
+    <link rel="stylesheet" href="../assets/css/ui/floating-sidebar.css" />
     <link rel="stylesheet" href="../assets/css/detail_project.css" />
     <link rel="stylesheet" href="../assets/css/responsive/detail_project_responsive.css" />
 </head>
@@ -238,8 +239,13 @@
         <i class="ri-arrow-up-line"></i>
     </button>
 
+    <!-- Floating Sidebar -->
+    <div id="floating-sidebar-container"></div>
+
+
     <script src="../assets/js/detail_project.js"></script>
     <script src="../assets/js/navbar.js"></script>
+    <script src="../assets/js/floating-sidebar.js"></script>
 </body>
 
 </html>
