--- a/pages/detail_repair_home.html
+++ b/pages/detail_repair_home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Xây nhà trọn gói</title>
+    <title>Sửa nhà trọn gói</title>
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,7 +34,7 @@
                     <span>></span>
                     <a href="services.html">Dịch vụ</a>
                     <span>></span>
-                    <span class="current">Xây nhà trọn gói</span>
+                    <span class="current">Sửa nhà trọn gói</span>
                 </nav>
                 <div class="service-construction-content">
                     <!-- Hero Slider Section -->
@@ -44,44 +44,49 @@
                                 <div class="slider-track" id="sliderTrack">
                                     <div class="slide active">
                                         <img src="../assets/images/services_images/slider_image1.png"
-                                            alt="Xây nhà trọn gói - Dự án 1">
+                                            alt="Sửa nhà trọn gói - Dự án 1">
                                         <div class="slide-content">
-                                            <h2>Xây nhà trọn gói</h2>
-                                            <p>Dịch vụ xây dựng nhà trọn gói từ A-Z với chất lượng cao và giá cả hợp lý
+                                            <h2>Sửa nhà trọn gói</h2>
+                                            <p>Dịch vụ sửa chữa, cải tạo nhà ở trọn gói với đội ngũ thợ kinh nghiệm lâu
+                                                năm
                                             </p>
                                         </div>
                                     </div>
                                     <div class="slide">
                                         <img src="../assets/images/services_images/slider_image2.png"
-                                            alt="Xây nhà trọn gói - Dự án 2">
+                                            alt="Sửa nhà trọn gói - Dự án 2">
                                         <div class="slide-content">
-                                            <h2>Thiết kế chuyên nghiệp</h2>
-                                            <p>Đội ngũ kiến trúc sư giàu kinh nghiệm thiết kế theo yêu cầu khách hàng
+                                            <h2>Sửa chữa điện nước</h2>
+                                            <p>Đội ngũ thợ điện nước, sửa chữa và thay thế hệ thống điện
+                                                nước an toàn
                                             </p>
                                         </div>
                                     </div>
                                     <div class="slide">
                                         <img src="../assets/images/services_images/slider_image3.png"
-                                            alt="Xây nhà trọn gói - Dự án 3">
+                                            alt="Sửa nhà trọn gói - Dự án 3">
                                         <div class="slide-content">
-                                            <h2>Thi công chất lượng</h2>
-                                            <p>Quy trình thi công chuyên nghiệp, đảm bảo tiến độ và chất lượng</p>
+                                            <h2>Cải tạo phòng</h2>
+                                            <p>Thiết kế và cải tạo không gian phòng theo nhu cầu, tối ưu hóa công năng
+                                            </p>
                                         </div>
                                     </div>
                                     <div class="slide">
                                         <img src="../assets/images/services_images/slider_image4.png"
-                                            alt="Xây nhà trọn gói - Dự án 4">
+                                            alt="Sửa nhà trọn gói - Dự án 4">
                                         <div class="slide-content">
-                                            <h2>Vật liệu cao cấp</h2>
-                                            <p>Sử dụng vật liệu chất lượng cao, có nguồn gốc rõ ràng</p>
+                                            <h2>Sơn sửa tường</h2>
+                                            <p>Sơn sửa, trang trí tường với chất liệu cao cấp, tạo không gian sống đẹp
+                                                mắt</p>
                                         </div>
                                     </div>
                                     <div class="slide">
                                         <img src="../assets/images/services_images/slider_image5.png"
-                                            alt="Xây nhà trọn gói - Dự án 5">
+                                            alt="Sửa nhà trọn gói - Dự án 5">
                                         <div class="slide-content">
-                                            <h2>Bảo hành dài hạn</h2>
-                                            <p>Cam kết bảo hành công trình lên đến 5 năm</p>
+                                            <h2>Thay thế vật liệu</h2>
+                                            <p>Thay thế và nâng cấp vật liệu cũ, đảm bảo chất lượng và độ bền lâu dài
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -109,23 +114,24 @@
                     <section class="service-introduction">
                         <div class="intro-container">
                             <div class="intro-image">
-                                <img src="../assets/images/services_images/service1.png" alt="Dịch vụ xây nhà trọn gói">
+                                <img src="../assets/images/services_images/service1.png" alt="Dịch vụ sửa nhà trọn gói">
                             </div>
                             <div class="intro-content">
                                 <div class="intro-category">GIỚI THIỆU</div>
-                                <h2 class="intro-title">Dịch vụ Xây Nhà Trọn Gói tại Trường Sinh Group</h2>
+                                <h2 class="intro-title">Dịch vụ Sửa Nhà Trọn Gói tại Trường Sinh Group</h2>
                                 <div class="intro-text">
-                                    <p>Xây nhà trọn gói là hình thức mà chủ đầu tư sẽ giao khoán toàn bộ mọi công việc
-                                        từ A-Z cho một nhà thầu khi xây dựng công trình. Cụ thể, nhà thầu sẽ có trách
-                                        nhiệm lên phương án, khảo sát kế hoạch, triển khai thi công, lắp đặt thiết bị và
-                                        hoàn thiện theo mô hình khép kín</p>
-                                    <p>Trường Sinh tự hào là đơn vị chuyên cung cấp dịch vụ xây nhà trọn gói trên toàn
+                                    <p>Sửa nhà trọn gói là dịch vụ cải tạo, sửa chữa toàn diện cho ngôi nhà hiện có.
+                                        Chúng tôi
+                                        chuyên cung cấp giải pháp sửa chữa từ A-Z bao gồm: sửa chữa điện nước, cải tạo
+                                        phòng,
+                                        sơn sửa tường, thay thế vật liệu và nâng cấp hệ thống theo mô hình khép kín</p>
+                                    <p>Trường Sinh tự hào là đơn vị chuyên cung cấp dịch vụ sửa nhà trọn gói trên toàn
                                         quốc. Với năng lực đã được kiểm chứng, chúng tôi cam kết mang đến cho khách hàng
-                                        giải pháp xây dựng trọn gói 3 Chuẩn:</p>
+                                        giải pháp sửa chữa trọn gói 3 Chuẩn:</p>
                                     <ul class="intro-list">
-                                        <li>Chuẩn báo giá</li>
-                                        <li>Chuẩn chất lượng</li>
-                                        <li>Chuẩn tiến độ</li>
+                                        <li>Chuẩn báo giá minh bạch</li>
+                                        <li>Chuẩn chất lượng sửa chữa</li>
+                                        <li>Chuẩn tiến độ hoàn thành</li>
                                     </ul>
                                 </div>
                             </div>
@@ -137,7 +143,7 @@
                             <div class="showcase-header">
                                 <div class="showcase-title-section">
                                     <div class="section-category">CÔNG TRÌNH</div>
-                                    <h2 class="section-main-title">Công trình đã triển khai</h2>
+                                    <h2 class="section-main-title">Công trình sửa chữa đã triển khai</h2>
                                 </div>
 
                             </div>
@@ -174,7 +180,8 @@
                                         <div class="featured-project-title">
                                             <h3>Công trình nổi bật</h3>
                                         </div>
-                                        <h4 class="project-name">Công Trình Nhà Ở Biệt Thự Tân Cổ Điển 3 Tầng 1 Tum Anh
+                                        <h4 class="project-name">Công Trình Sửa Chữa Nhà Ở Biệt Thự Tân Cổ Điển 3 Tầng 1
+                                            Tum Anh
                                             Nguyễn Mạnh Dũng Phú Thọ - NOBTTCD03001</h4>
 
                                         <div class="project-meta">
@@ -307,7 +314,7 @@
                     <section class="construction-process">
                         <div class="process-container">
                             <div class="process-header">
-                                <h2 class="process-title">Quy Trình Xây Nhà Trọn Gói</h2>
+                                <h2 class="process-title">Quy Trình Sửa Nhà Trọn Gói</h2>
                             </div>
 
                             <div class="process-flow">
@@ -318,9 +325,9 @@
                                     <div class="step-number">01</div>
                                     <div class="step-content">
                                         <h3 class="step-title">Tiếp nhận thông tin</h3>
-                                        <p class="step-description">Khách hàng liên hệ với bên cung cấp dịch vụ thiết kế
-                                            và thi công trọn gói công trình, sau đó cung cấp những thông tin và những
-                                            yêu cầu về xây dựng</p>
+                                        <p class="step-description">Khách hàng liên hệ với bên cung cấp dịch vụ sửa chữa
+                                            trọn gói, sau đó cung cấp những thông tin và những
+                                            yêu cầu về sửa chữa, cải tạo</p>
                                     </div>
                                 </div>
 
@@ -331,8 +338,8 @@
                                         <h3 class="step-title">Tư vấn và báo giá</h3>
                                         <p class="step-description">Sau khi tiếp nhận thông tin, Trường Sinh sẽ thảo
                                             luận và có những tư vấn cụ thể dựa trên những mong muốn của khách hàng. Đồng
-                                            thời, báo giá thiết kế và lập khái toán thi công, đơn giá sẽ dựa trên tổng
-                                            chi phí dự kiến xây dựng.</p>
+                                            thời, báo giá sửa chữa và lập khái toán thi công, đơn giá sẽ dựa trên tổng
+                                            chi phí dự kiến sửa chữa.</p>
                                     </div>
                                 </div>
 
@@ -353,10 +360,12 @@
                                 <div class="process-step step-bottom step-4">
                                     <div class="step-number">04</div>
                                     <div class="step-content">
-                                        <h3 class="step-title">Thiết kế</h3>
+                                        <h3 class="step-title">Thiết kế cải tạo</h3>
                                         <p class="step-description">Dựa trên những soạn thảo đã thống nhất, đơn vị dịch
-                                            vụ sẽ tiến hành thiết kế chi tiết cho công trình. Bản vẽ sẽ thể hiện được
-                                            đầy đủ về mặt bằng, diện tích, công năng từng phòng và phối cảnh. Từ đó, có
+                                            vụ sẽ tiến hành thiết kế cải tạo chi tiết cho công trình. Bản vẽ sẽ thể hiện
+                                            được
+                                            đầy đủ về mặt bằng cải tạo, diện tích, công năng từng phòng và phối cảnh. Từ
+                                            đó, có
                                             thể dự trù được kinh phí và tối ưu vật tư sử dụng.</p>
                                     </div>
                                 </div>
@@ -365,9 +374,10 @@
                                 <div class="process-step step-top step-5">
                                     <div class="step-number">05</div>
                                     <div class="step-content">
-                                        <h3 class="step-title">Thi công</h3>
-                                        <p class="step-description">Nhà thầu bắt tay vào thi công, đảm bảo triển khai
-                                            theo đúng kế hoạch và chất lượng suốt quá trình xây dựng. Quá trình này gồm
+                                        <h3 class="step-title">Thi công sửa chữa</h3>
+                                        <p class="step-description">Nhà thầu bắt tay vào thi công sửa chữa, đảm bảo
+                                            triển khai
+                                            theo đúng kế hoạch và chất lượng suốt quá trình sửa chữa. Quá trình này gồm
                                             nhiều giai đoạn khác nhau, khách hàng có thể giám sát trong khi thực hiện.
                                         </p>
                                     </div>
