--- a/pages/detail_service.html
+++ b/pages/detail_service.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../assets/css/ui/header.css" />
     <link rel="stylesheet" href="../assets/css/ui/navbar.css" />
     <link rel="stylesheet" href="../assets/css/ui/footer.css" />
+    <link rel="stylesheet" href="../assets/css/ui/floating-sidebar.css" />
     <link rel="stylesheet" href="../assets/css/detail_service.css" />
     <link rel="stylesheet" href="../assets/css/responsive/detail_service_responsive.css" />
 </head>
@@ -57,8 +58,8 @@
                                 <div class="stat-label">Khách hàng hài lòng</div>
                             </div>
                             <div class="stat-item">
-                                <div class="stat-number">24/7</div>
-                                <div class="stat-label">Hỗ trợ khách hàng</div>
+                                <div class="stat-number">80+</div>
+                                <div class="stat-label">KTS - Kỹ sư thiết kế</div>
                             </div>
                         </div>
                     </div>
@@ -322,8 +323,13 @@
         <i class="ri-arrow-up-line"></i>
     </button>
 
+    <!-- Floating Sidebar -->
+    <div id="floating-sidebar-container"></div>
+
+
     <script src="../assets/js/detail_service.js"></script>
     <script src="../assets/js/navbar.js"></script>
+    <script src="../assets/js/floating-sidebar.js"></script>
 </body>
 
 </html>
