--- a/pages/services.html
+++ b/pages/services.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../assets/css/ui/header.css" />
     <link rel="stylesheet" href="../assets/css/ui/navbar.css" />
     <link rel="stylesheet" href="../assets/css/ui/footer.css" />
+    <link rel="stylesheet" href="../assets/css/ui/floating-sidebar.css" />
     <link rel="stylesheet" href="../assets/css/services.css" />
     <link rel="stylesheet" href="../assets/css/responsive/services_responsive.css" />
 </head>
@@ -102,21 +103,21 @@
                         </a>
                     </div> -->
 
-                    <!-- Tư vấn thiết kế -->
+                    <!-- Sửa nhà trọn gói -->
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="ri-customer-service-2-line"></i>
+                            <i class="ri-tools-line"></i>
                         </div>
-                        <h3 class="service-title">Tư vấn thiết kế</h3>
-                        <p class="service-description">Tư vấn miễn phí về thiết kế, lựa chọn vật liệu và giải pháp xây
-                            dựng phù hợp với ngân sách.</p>
+                        <h3 class="service-title">Sửa nhà trọn gói</h3>
+                        <p class="service-description">Dịch vụ sửa chữa, cải tạo nhà ở trọn gói với đội ngũ thợ lành
+                            nghề và kinh nghiệm lâu năm.</p>
                         <ul class="service-features">
-                            <li><i class="ri-check-line"></i> Tư vấn miễn phí</li>
-                            <li><i class="ri-check-line"></i> Khảo sát thực tế</li>
-                            <li><i class="ri-check-line"></i> Báo giá chi tiết</li>
-                            <li><i class="ri-check-line"></i> Hỗ trợ 24/7</li>
+                            <li><i class="ri-check-line"></i> Sửa chữa điện nước</li>
+                            <li><i class="ri-check-line"></i> Cải tạo phòng</li>
+                            <li><i class="ri-check-line"></i> Sơn sửa tường</li>
+                            <li><i class="ri-check-line"></i> Thay thế vật liệu</li>
                         </ul>
-                        <a href="contact.html" class="service-btn">
+                        <a href="detail_repair_home.html" class="service-btn">
                             <span>Liên hệ ngay</span>
                             <i class="ri-arrow-right-line"></i>
                         </a>
@@ -241,8 +242,13 @@
         <i class="ri-arrow-up-line"></i>
     </button>
 
+    <!-- Floating Sidebar -->
+    <div id="floating-sidebar-container"></div>
+
+
     <script src="../assets/js/services.js"></script>
     <script src="../assets/js/navbar.js"></script>
+    <script src="../assets/js/floating-sidebar.js"></script>
 </body>
 
 </html>
