--- a/pages/service-interior.html
+++ b/pages/service-interior.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../assets/css/ui/header.css" />
     <link rel="stylesheet" href="../assets/css/ui/navbar.css" />
     <link rel="stylesheet" href="../assets/css/ui/footer.css" />
+    <link rel="stylesheet" href="../assets/css/ui/floating-sidebar.css" />
     <link rel="stylesheet" href="../assets/css/main-services.css" />
     <link rel="stylesheet" href="../assets/css/responsive/main-services_responsive.css" />
 </head>
@@ -398,6 +399,56 @@
                         </div>
                     </section>
 
+                    <!-- Contact Form Section -->
+                    <section id="contact-form" class="contact-form">
+                        <div class="container">
+                            <div class="contact-content">
+                                <!-- Left Column - Image -->
+                                <div class="contact-visual">
+                                    <div class="image-container">
+                                        <img src="../assets/images/index_images/experience1.png" alt="Contact Visual">
+                                    </div>
+                                </div>
+
+                                <!-- Right Column - Contact Form -->
+                                <div class="contact-form-container">
+                                    <div class="form-wrapper">
+                                        <h2 class="form-title">ĐĂNG KÝ TƯ VẤN MIỄN PHÍ</h2>
+
+                                        <form class="contact-form-element">
+                                            <div class="form-group">
+                                                <input type="text" id="fullname" name="fullname"
+                                                    placeholder="Họ và tên..." required>
+                                            </div>
+
+                                            <div class="form-group">
+                                                <input type="tel" id="phone" name="phone" placeholder="Số điện thoại"
+                                                    required>
+                                            </div>
+
+                                            <div class="form-group">
+                                                <input type="text" id="address" name="address" placeholder="Địa chỉ"
+                                                    required>
+                                            </div>
+
+                                            <div class="form-group">
+                                                <input type="email" id="email" name="email"
+                                                    placeholder="Email (không bắt buộc)">
+                                            </div>
+
+                                            <div class="form-group">
+                                                <textarea id="content" name="content" placeholder="Nội dung" rows="4"
+                                                    required></textarea>
+                                            </div>
+
+                                            <button type="submit" class="btn-submit">Đăng ký ngay</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
                 </div>
             </div>
         </main>
@@ -409,8 +460,13 @@
         <i class="ri-arrow-up-line"></i>
     </button>
 
+    <!-- Floating Sidebar -->
+    <div id="floating-sidebar-container"></div>
+
+
     <script src="../assets/js/main-services.js"></script>
     <script src="../assets/js/navbar.js"></script>
+    <script src="../assets/js/floating-sidebar.js"></script>
 </body>
 
 </html>
